log
Fri 19 Aug 2022 02:08:59 PM UTC: 
 tests:  0|6
total_score: 0/70
7dc0c1a
Fri 19 Aug 2022 02:17:52 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |         list->size = 0;
      |             ^~
Compilation failed
ca5ae20
Fri 19 Aug 2022 02:20:09 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:13: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |         list->size = 1;
      |             ^~
Compilation failed
5708411
